--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.4",
     "vue": "^2.5.0",
+    "vue-notification": "^1.3.4",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
   },
